<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_nav_grey"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_friends_nav_grey"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message_nav_grey"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_mychallenge"
        android:icon="@drawable/ic_challenge_nav_grey"
        android:title="@string/title_challenge" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_nav_grey"
        android:title="@string/title_more" />
</menu>