<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gift_gallery"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_earning"
            android:icon="@drawable/ic_earning_account"
            android:title="@string/menu_earning" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_left_menu"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>