<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="nav_header_desc"
        android:paddingTop="8dp"
        android:src="@drawable/sample" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:fontFamily="@font/metropolis_semibold"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textSize="@dimen/_14sdp"
        android:text="Full Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/mLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:fontFamily="@font/metropolis_semibold"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:text="Location"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/navGiftLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_below="@+id/mLocation"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_gift_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/nav_home"
            android:text="@string/menu_gift"
            android:textColor="@color/white"
            android:fontFamily="@font/metropolis_regular"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/navGiftLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/navEarninglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/navIvEarning"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_earning_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/metropolis_regular"
            android:layout_toRightOf="@+id/navIvEarning"
            android:text="@string/menu_earning"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/navEarninglayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/navGiftlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/navIvGift"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/my_gift"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/navIvGift"
            android:text="My Gifts"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/view23"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/navGiftlayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/navSettingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view23"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/navIvsetting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_setting_left_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:fontFamily="@font/metropolis_regular"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/navIvsetting"
            android:text="@string/menu_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/navSettingLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/navLogoutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/navIvLogout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/metropolis_regular"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/navIvLogout"
            android:text="@string/menu_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
</RelativeLayout>